--- a/Style.css
+++ b/Style.css
@@ -1,76 +1,4 @@
-h1 {
-    text-align: center;
-    color:orange;
-    text-decoration: line-through;
-}
-
-ul {
-    list-style-type: none;
-}
-
-button {
-    border-radius: 10px;
-    padding: 15px 32px;
-    font-size: 16px;
-    cursor: pointer;
-    border: none
-}
-
-form{
+p {
     color: blue;
-}
-
-#first {
-    letter-spacing: 20px;
-}
-
-.centrado {
-    text-align: center
-}
-
-.italica {
-    font-style: italic
-}
-
-.par {
-    color:aqua;
-    background-color: beige
-}
-
-.big_text {
-    font-size: 30px
-}
-
-.sombreado {
-    text-shadow: 2px 2px gray;
-}
-
-.underlined {
-    text-decoration: underline;
-}
-
-.redondo {
-    border-radius: 10px;
-}
-
-.remarcado {
-    border-color: blue;
-    padding: 12px 20px;
-}
-
-input[obligatorio] {
-    border-color: red
-}
-
-input:out-of-range {
-    background-color: rgba(255, 0, 0, 0.25);
-    border-color: red;
-}
-
-input:hover{
-    background-color: lightblue;
-}
-
-input[type="checkbox"]:checked {
-    box-shadow: 0 0 0 3px orange;
+    background-color: red
 }
